--- a/index.html
+++ b/index.html
@@ -13,63 +13,68 @@
       <td>
         <h1>Alexander Jacob Burton</h1>
         <p><em>Founder and CEO of <strong><a href="https://twitter.com/AlexBurton90">Built by Burton Coding</a></strong></em></p>
-        <p>I am an Ethernet Repair team lead who is starting
-          a new venture into the coding world. I have amassed many years of network
-          experience through my work within Openreach in the UK,
-          and I cannot wait to get started! ❤ </p>
+        <p>A deliberate and task focused individual that rapidly builds a rapport with key stakeholders, manages multiple technical customer service affecting issues from start to the best possible resolution.  Personally invests in all challenges set to the team and owns goals with a particular emphasis applied to delivering a scrutinized, high quality outcome.  Able to draw on years of first-hand engineering knowledge that adds evident credibility when engaging with senior and exec level enquiries and escalations.</p>
       </td>
     </tr>
   </table>
 
   <hr size="3" noshade>
-  <h3>Education:</h3>
-  <ul>
-    <li>Wellsway School</li>
-    <li>Wellsway 6th Form</li>
-  </ul>
-    <hr size="3" noshade>
-  <h3>Work Experience</h3>
 
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2010-2013</td>
-        <td>Lead Developer at TempoApp</td>
-      </tr>
-      <tr>
-        <td>2010</td>
-        <td>Researcher at Apple Inc.</td>
-      </tr>
-    </tbody>
-  </table>
+  <h3>Key Skills:</h3>
 
-    <hr size="3" noshade>
-
-  <h3>Skills</h3>
-
-  <table cellspacing="10">
+  <table>
     <tr>
-      <td>Web Development</td>
+      <td>Technical Communication</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Ethernet</td>
+      <td>Networking</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Optical Network</td>
+      <td>Openreach Network</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
   </table>
 
 
     <hr size="3" noshade>
+
+    <h3>Employment:</h3>
+
+    <table cellspacing="5">
+      <thead>
+        <tr>
+          <!-- changed TH tag to TD to align left and bold rather than center! -->
+          <td><strong>Date:</strong></td>
+          <td><strong>Work:</strong></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>May 2018-Present</td>
+          <td>Openreach - Ethernet Repair Team Leader</td>
+        </tr>
+        <tr>
+          <td>Nov 2016- May 2018</td>
+          <td>Openreach - Ethernet Repair Team Leader</td>
+        </tr>
+        <tr>
+          <td>Jan 2015- Nov 2016</td>
+          <td>Openreach - Customer Service Engineer - Copper and FTTC services</td>
+        </tr>
+      </tbody>
+    </table>
+
+      <hr size="3" noshade>
+
+      <h3>Education:</h3>
+      <ul>
+        <li>Wellsway 6th Form, 2007-2009</li>
+        <li>Wellsway School, 2002-2007</li>
+      </ul>
+        <hr size="3" noshade>
+
   <a href="hobbies.html">My Hobbies</a>
   <br>
   <a href="contact.html">Contact Me!</a>
